layout - for thesis

--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -1,7 +1,5 @@
 
-\renewcommand\thefigure{A.\arabic{figure}}
-\setcounter{figure}{0} 
-\captionsetup[subfigure]{labelformat=parens}
+
 
 %--------------------------------------------
 % crime - key distribution
@@ -16,29 +14,29 @@
 \vspace*{\fill}\clearpage
 
 %--------------------------------------------
-% crime - assault distribution over time
-\vspace*{\fill}
-\begin{figure}[H]\centering
-	\caption{Distribution of assaults across days of the year, per year}\label{fig_soc_ext:assault_year_distribution}
-	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2011.pdf}
-	\end{subfigure}
-	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2012.pdf}
-	\end{subfigure}\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2013.pdf}
-	\end{subfigure}
-	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014.pdf}
-	\end{subfigure}
-	\begin{subfigure}[h]{0.48\linewidth}\centering
-		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2015.pdf}
-	\end{subfigure}
-	\begin{minipage}{\linewidth}
-		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.}
-	\end{minipage}
-\end{figure}
-\vspace*{\fill}\clearpage
+%% crime - assault distribution over time
+%\vspace*{\fill}
+%\begin{figure}[H]\centering
+%	\caption{Distribution of assaults across days of the year, per year}\label{fig_soc_ext:assault_year_distribution}
+%	\begin{subfigure}[h]{0.48\linewidth}\centering
+%		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2011.pdf}
+%	\end{subfigure}
+%	\begin{subfigure}[h]{0.48\linewidth}\centering
+%		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2012.pdf}
+%	\end{subfigure}\begin{subfigure}[h]{0.48\linewidth}\centering
+%		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2013.pdf}
+%	\end{subfigure}
+%	\begin{subfigure}[h]{0.48\linewidth}\centering
+%		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2014.pdf}
+%	\end{subfigure}
+%	\begin{subfigure}[h]{0.48\linewidth}\centering
+%		\includegraphics[width=\linewidth]{descriptive/soc_ext_assaults_per_day_2015.pdf}
+%	\end{subfigure}
+%	\begin{minipage}{\linewidth}
+%		\scriptsize{\emph{Notes:} The figure shows the relative frequency of assaults per day between 2011 and 2015 in the Federal Republic of Germany.}
+%	\end{minipage}
+%\end{figure}
+%\vspace*{\fill}\clearpage
 %--------------------------------------------
 % MAP: STADIUMS
 \vspace*{\fill}
