--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -115,24 +115,32 @@ The crime data is derived from the German Police Crime Statistics, which is prov
 
 The micro-data is aggregated to the municipality-day level and the main outcome, the assault rate, is defined as the number of assaults per million population. Assaults are defined as actions involving physical violence. For that purpose, I use the crime type code `simple willful bodily harm' (\textit{Vorsätzliche einfache Körperverletzung}, § 223 StGB). There are roughly 120 types of criminal offenses (recorded in 6 digit codes), with the vast majority of cases classified by only a handful of codes.\footnote{The top 10 of the most prevalent crime keys account for more than 90 percent of the cases.} Figure \ref{fig_soc_ext:offense_types_distribution_2014} in the Appendix shows the distribution of cases per crime key for the twenty most common offense types in 2014. `Simple willful bodily harm' is by far the most common offense, contributing to about 45 percent of all cases. Due to its prevalence and its association with aggression, I choose this offense type as the main outcome variable in the analysis.
 
-Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain hourly information. This has no consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults increases during the day and peaks around midnight. To assign the cases that occur in the early morning hours to the day on which they originate, I define a day as beginning at 6:00\textsc{am} and ending at 5:59\textsc{am}. Panel B shows the distribution of assaults by day of the week. There are relatively more assaults on Fridays and Saturdays, whereas the other days exhibit slightly smaller assault rates. Panel C shows that the number of assaults has a strong seasonal pattern, with the highest value recorded in May and the smallest in August.\footnote{Panel C shows the monthly number of assaults while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New Year's Eve is a particularly impressive outlier.\footnote{Panels C and D show data for the year 2014 only. Figure \ref{fig_soc_ext:assault_year_distribution} in the Appendix shows the distribution per day for different years.}
+Figure \ref{fig_soc_ext:assault_time_distribution_2014} shows the distribution of assaults over time. Panel A displays the variation of assaults per hour of the day.\footnote{Roughly 15 percent of the observations do not contain hourly information. This has no consequences for the main analysis, as I examine daily variation in the assault rate.} The number of assaults increases during the day and peaks around midnight. To assign the cases that occur in the early morning hours to the day on which they originate, I define a day as beginning at 6:00\textsc{am} and ending at 5:59\textsc{am}. Panel B shows the distribution of assaults by day of the week. There are relatively more assaults on Fridays and Saturdays, whereas the other days exhibit slightly smaller assault rates. Panel C shows that the number of assaults has a strong seasonal pattern, with the highest value recorded in May and the smallest in August.\footnote{Panel C shows the monthly number of assaults while adjusting for the number of days per month.} Panel D confirms this impression by plotting the daily number of assaults. New Year's Eve is a particularly impressive outlier.\footnote{Panels C and D show data for the year 2014 only.}
 
 % XXX per day roughly around 320 per day, peak on new year's eve, high on holidays (carneval) 
 
-% MAP : (I) WEATHER monitors & (II) NEIGHBOUR regions
-\input{soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions}
+
 
 
 
 \subsection{Football Data}
 The data on football matches is self-collected and is obtained via web scraping from kicker.de and transfermarkt.de. All matches played in the first three leagues of the German football league system in the period from January 2011 until May 2015 are recorded. The data contains detailed match and table standings parameters, e.g. time and place of the match, number of spectators, pregame point difference, goals, penalties, cards, referee characteristics, among others. Furthermore, there is comprehensive information on the individual teams, such as team size, average age, market value, and the number of foreign players. The stadiums where the matches take place are geographically encoded. Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions} depicts a map with all 69 stadiums included in the data set.
 
+
+
+
 % XXX stadiums in which not at least a full season is played are excluded from the analysis.\footnote{This affects the stadiums in Lübeck (1), Reutlingen (12), Elversberg (14), and the Air-Berlin stadium in Dusseldorf (3). The number in parenthesis indicates the number of games that were held in that venue. This excludes 0.6 percent of all matches.}
+
+
+Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of matches takes place between Friday and Sunday. Games of the lower leagues occasionally also take place during the week. Such games are held only in the evenings. In contrast, matches on weekends usually take place in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. Spectator number vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} attracts the most spectators with an average of 44,000 viewers per game, followed by the second league with an average of 17,000 fans per match, and the lowest league attracts slightly less than 6,000 fans per game on average.
+
+% MAP : (I) WEATHER monitors & (II) NEIGHBOUR regions
+\input{soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions}
+
 
 % Descriptives about football matches
 \input{soc_ext_fig__descriptives_matches_time_attendance}
 
-Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of matches takes place between Friday and Sunday. Games of the lower leagues occasionally also take place during the week. Such games are held only in the evenings. In contrast, matches on weekends usually take place in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. Spectator number vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} attracts the most spectators with an average of 44,000 viewers per game, followed by the second league with an average of 17,000 fans per match, and the lowest league attracts slightly less than 6,000 fans per game on average.
 
 When investigating channels of how football games may affect assaults, I exploit betting odds obtained from oddsportal.com via web scraping. The betting odds give an idea of pregame expectations. I translate the odds of the three game outcomes to probabilities which are the inverse of the betting odds. The probabilities serve as suitable predictors for game outcomes, as shown in Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}.\footnote{Panel A of Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes} shows the close relationship between the realized score differential and the probability spread. Panels B and C demonstrate that the probability of winning increases the higher the probability spread.}
 
@@ -208,11 +216,14 @@ Given the design of the empirical approach, there could be another potential thr
 % descriptive figure, ass_rate across DOW
 Before presenting the regression results, Figure \ref{fig_soc_ext:assault_rate_across_dows} gives an intuitive preview of the main findings. Using the same data as in the main analysis, it shows the assault rate across the days of the week.\footnote{Appendix Figure \ref{fig_soc_ext:assaults_across_dows} shows the same scheme using the raw number of assaults across days of the week for days with and without games.} The daily rates are presented for days with and without home games. The average daily assault rate is higher for weeks when a home game is played than when no game is played. The difference in means is statistically significant for all days except Tuesdays and Wednesdays.\footnote{The average assault rate on Thursdays with games is very high compared to Thursdays without games. This may be the result of very few games take place on a Thursday. In my sample, only 18 (0.4 percent) of all games take place on a Thursday.} The empirical model exploits the variation in the number of assaults across the days of the week, and in particular how the pattern varies between weeks with and without games.
 
-% main result table with more controls
-Table \ref{tab_soc_ext:reg_fe_assrate} reports estimates corresponding to equation \ref{eq_soc_ext:model} when continuously adding more controls. The dependent variable is the assault rate, which is defined as the number of offenses per million population. In column 1, I include region, day-of-week, month, and year fixed effects. In column 2 weather controls are added. Holidays fixed effects are included in column 3. In column 4, I control for region-specific date fixed effects. Note that although the estimates vary marginally across columns, I use throughout the paper the model presented in column 4 for the analyses that follow. The estimate from the preferred specification in column 4 suggests that a home game increases the assault rate by an average of 2.677 assaults per million population. This corresponds to an increase of 21.5 percent compared to the level without games.
 
 % main regression table: include fixed effects
 \input{soc_ext_tab__reg_fe_assrate}
+
+% main result table with more controls
+Table \ref{tab_soc_ext:reg_fe_assrate} reports estimates corresponding to equation \ref{eq_soc_ext:model} when continuously adding more controls. The dependent variable is the assault rate, which is defined as the number of offenses per million population. In column 1, I include region, day-of-week, month, and year fixed effects. In column 2 weather controls are added. Holidays fixed effects are included in column 3. In column 4, I control for region-specific date fixed effects. Note that although the estimates vary marginally across columns, I use throughout the paper the model presented in column 4 for the analyses that follow. The estimate from the preferred specification in column 4 suggests that a home game increases the assault rate by an average of 2.677 assaults per million population. This corresponds to an increase of 21.5 percent compared to the level without games.
+
+
 
 
 % table effect heterogeneity: victim and crime chars
@@ -261,12 +272,13 @@ As discussed above, the baseline model considers the effect of football matches,
 \subsection{Channels}
 This section investigates potential mechanisms through which football games may cause additional assaults. I consider emotional cues and the prominence of games as potential channels.
 
-% table EMOTIONAL CUES
-\input{soc_ext_tab__reg_fe_assrate_emotional_cues}
+
 
 % emotional cues
 First, I consider emotional cues. This is motivated by the findings of \cite{card2011family} who demonstrate that unexpected defeats of local football teams trigger family violence. The results can be best explained with the frustration-aggression hypothesis, first proposed by \cite{dollard1939frustration}, which predicts aggressive behavior in the event of frustrating events. \cite{rees2009college} similarly show that there are more violent offenses when the local college football team suffers a defeat. For this reason, I analyze in Table \ref{tab_soc_ext:reg_fe_assrate_emotional_cues} whether visceral factors may be the reason for the additional assaults. In column 1 I investigate whether an emotionally upsetting event during a game leads to a higher assault rate. To answer this question, I create an index that equals one for games that include at least one of the following potentially troubling events: a penalty is awarded (20 percent of all games), a player receives a red card (10 percent of all games), or the referee receives an insufficient grade (15 percent of all games). The index shows that 35 percent of all games involve at least one upsetting episode as defined in the previous categories. The estimates in column 1 do not suggest that emotional cues trigger more violent behavior since the estimates for games with and without upsetting events are not significantly different. In the second and third column, I show estimates following the approach of \cite{card2011family}. I examine the impact of game outcomes relative to their pregame expectations. Pregame expectations are included in the analysis as matches with contrasting predictions may be very different from each other. By including predicted outcomes, I can estimate the effect that results from the defeat of a team that was expected to win, and vice versa. Using data from oddsportal.com, I define a game as unpredictable when the absolute probability difference between winning and loosing is smaller than 20 percentage points.\footnote{Similar results are obtained when I define different threshold values and when I deviate from the symmetry around the origin.} When the spread's value exceeds the threshold, a win or a loss of the home game is expected. Around 45 percent of the games are expected to be close, another 45 percent are expected to be won, while 10 percent of the games are expected to be lost. The significantly larger share of expected victories may be attributed to the home-advantage. In column 2, I first examine the effects of matches with distinct predicted match outcomes. The estimates do not suggest that the effect of games with different predicted outcomes vary systematically from each other. In column 3, I additionally include interactions between expected and actual game outcomes. The estimates are relatively small in magnitude and not significantly different from zero, implying that unexpected wins/losses do not cause additional assaults. Altogether, there is no evidence that emotional cues drive violent behavior in the context of professional football games in Germany.
 
+% table EMOTIONAL CUES
+\input{soc_ext_tab__reg_fe_assrate_emotional_cues}
 
 % table TEAM/GAME prominence
 \input{soc_ext_tab__reg_fe_assrate_prominent_games}
@@ -299,6 +311,7 @@ I perform several sensitivity and placebo tests to assess the robustness of the 
 
 % Alternative econometrics: sample, weights, estimation
 \textbf{Alternative econometric specifications.--} First, I show that the results are not sensitive to alterations in the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than originally planned. Deviation from the original match schedule may pose a risk to the allocation of games that is plausibly random. For this reason, I exclude the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{Of the 4,461 games in the sample, 2.24 percent are rescheduled. The vast majority of rescheduled matches (95 percent) take place in league three.} Second, I show the effects of omitting population \textit{weights} from the regressions. The effect of football matches without considering population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they become more relevant when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Given the discrete nature of the dependent variable and the fact that there are many cells with zero reports, I employ a Poisson model. The corresponding regression specification reads as follows:
+
 \begin{align}
 E\left[ \text{Assaults}_{rdmy}\right.&|\left.\text{Gameday}_{rdmy},\vartheta_r,\text{date}_{dmy}, \mathbf{X}_{rdmy} \right] \nonumber \\ &= exp\left( \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \text{date}_{dmy} + \lambda\mathbf{X}_{rdmy} \right). 
 \label{eq_soc_ext:poisson_model}
@@ -310,14 +323,15 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 % Other forms of violence 
 \textbf{Other forms of violence.--} Next, I investigate the robustness of the findings when considering at other forms of violence. First, a broader definition of assaults is considered. In addition to offenses coded as `simple willful bodily harm', I further include negligent, dangerous, and grievous bodily harm as well as brawls. Appendix Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are included in the expanded definition of assaults and how the penal codes of the German Criminal Code (\textit{StGB}) are translated into the offense keys of the Police Crime Statistics. The effect size of 5.417 assaults per million population is significantly larger than the baseline coefficient. This indicates that football games also lead to an increase in other forms of physical violence. Second, I investigate the effect of football games on threats, which can be regarded as a precursor of physical violence. The effect size of 0.216 threats per million population is relatively small. The estimate represents a 5.4 percent increase. Third, offenses coded as resisting law enforcement officers are examined. I find that football games lead to on average 0.775 offenses per million population. Overall, the results of these robustness checks indicate that other forms of violence are also affected by professional football games. This suggests that there is no substitution of different types of crime, but that additional violent offenses are committed.\newline
 
+% fig: PLACEBO GAMES
+\input{soc_ext_fig__robustness_placebo_games}
 
 % Placebo games
 \textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
 
 
 
-% fig: PLACEBO GAMES
-\input{soc_ext_fig__robustness_placebo_games}
+
 
 
 
