--- a/analysis/output/tables/soc_ext_fig__assault_rate_across_dows.tex
+++ b/analysis/output/tables/soc_ext_fig__assault_rate_across_dows.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]\centering
+\begin{figure}[t]\centering
 	\caption{The average assault rate on gamedays and days where no game takes place}\label{fig_soc_ext:assault_rate_across_dows}
 	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_descr_assaultrate_gd_nongd_hor.pdf}
 	\begin{minipage}{0.95\linewidth}
