--- a/analysis/output/tables/soc_ext_fig__assault_time_distribution_2014.tex
+++ b/analysis/output/tables/soc_ext_fig__assault_time_distribution_2014.tex
@@ -1,5 +1,5 @@
 % Figiure from Stata
-\begin{figure}[ht]\centering
+\begin{figure}[t]\centering
 	\caption{Distribution of assaults across time}\label{fig_soc_ext:assault_time_distribution_2014}
 
 	\includegraphics[width=\linewidth]{descriptive/soc_ect_desc_crime_ass_time.pdf}
