--- a/analysis/output/tables/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
+++ b/analysis/output/tables/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
@@ -1,7 +1,7 @@
 % This file combines manually the coefficients from the tables of victim and crime characteristics
 
 
-\begin{table}[ht] \centering 
+\begin{table}[t] \centering 
 	\begin{threeparttable} \centering \caption{Effect heterogeneity by victim and crime characteristics}
 		\label{tab_soc_ext:reg_fe_assrate_victim_crime_chars}
 		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
