--- a/analysis/output/tables/soc_ext_tab__reg_fe_assrate.tex
+++ b/analysis/output/tables/soc_ext_tab__reg_fe_assrate.tex
@@ -1,4 +1,4 @@
-\begin{table}[ht] \centering 
+\begin{table}[t] \centering 
 	\begin{threeparttable} \centering \caption{Effects on assault rate}\label{tab_soc_ext:reg_fe_assrate}
 		{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
 			\begin{tabular}{l*{6}{c}}
