location of map in body

--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -134,15 +134,17 @@ The data on football matches is self-collected and is obtained via web scraping 
 
 Figure \ref{fig_soc_ext:descriptives_matches_time_attendance} illustrates insights into key variables. Panel A shows the number of matches per day of the week and league. The vast majority of matches takes place between Friday and Sunday. Games of the lower leagues occasionally also take place during the week. Such games are held only in the evenings. In contrast, matches on weekends usually take place in the afternoon. The inclusion of day-of-week fixed effects in the baseline specification helps to account for the higher share of games played on weekends, which are associated with higher levels of criminal behavior. Spectator number vary substantially across the three professional leagues, as depicted in Panel C. The \textit{Bundesliga} attracts the most spectators with an average of 44,000 viewers per game, followed by the second league with an average of 17,000 fans per match, and the lowest league attracts slightly less than 6,000 fans per game on average.
 
+
+\afterpage{
 % MAP : (I) WEATHER monitors & (II) NEIGHBOUR regions
 \input{soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions}
-
-
 % Descriptives about football matches
 \input{soc_ext_fig__descriptives_matches_time_attendance}
+}
 
 
 When investigating channels of how football games may affect assaults, I exploit betting odds obtained from oddsportal.com via web scraping. The betting odds give an idea of pregame expectations. I translate the odds of the three game outcomes to probabilities which are the inverse of the betting odds. The probabilities serve as suitable predictors for game outcomes, as shown in Appendix Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes}.\footnote{Panel A of Figure \ref{fig_soc_ext:pregame_probability_spread_outcomes} shows the close relationship between the realized score differential and the probability spread. Panels B and C demonstrate that the probability of winning increases the higher the probability spread.}
+
 
 
 \subsection{Weather Data}
