layout for diss

--- a/analysis/output/tables/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
+++ b/analysis/output/tables/soc_ext_fig__map_gem_stadiums_monitor_and_neighboring_regions.tex
@@ -1,7 +1,7 @@
-\newgeometry{left=1cm,right=1cm,top=3cm,bottom=3cm} 
+\newgeometry{left=2cm,right=2cm,top=3cm,bottom=3cm} 
 \begin{landscape}
 	\vspace*{\fill}
-	\begin{figure}[ht]\centering
+	\begin{figure}[H]\centering
 		\caption{The stadiums with the closest weather monitors and neighboring regions}\label{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}
 
 		\begin{subfigure}[h]{0.4\linewidth}\centering\caption{The closest weather monitors}
@@ -15,6 +15,7 @@
 			\scriptsize{\emph{Notes:} The map on the left shows the stadiums used in the analysis over the seasons 2010/11 until 2014/15 (red dots) and their closest weather monitors (blue dots). The orange lines indicate how the weather monitors are assigned to the stadiums. The map on the right shows the regions that are used in the analysis for spatial displacement effects. The neighboring municipalities are chosen to be in the sample for estimating spatial displacement effects if they have a common border with a region that contains a stadium. The red dots are the stadiums, the black outlines indicate federal state boundaries.\newline \emph{Source:} Own representation with data from the Federal Institute for Research on Building, Urban Affairs and Spatial Development (BBSR).}
 		\end{minipage}
 	\end{figure}
-	\vspace*{\fill}\clearpage
+	\vspace*{\fill}
 \end{landscape}
 \restoregeometry
+\clearpage
