--- a/analysis/output/tables/soc_ext_fig__assault_time_distribution_2014.tex
+++ b/analysis/output/tables/soc_ext_fig__assault_time_distribution_2014.tex
@@ -2,9 +2,9 @@
 \begin{figure}[t]\centering
 	\caption{Distribution of assaults across time}\label{fig_soc_ext:assault_time_distribution_2014}
 
-	\includegraphics[width=\linewidth]{descriptive/soc_ect_desc_crime_ass_time.pdf}
+	\includegraphics[width=0.9\linewidth]{descriptive/soc_ect_desc_crime_ass_time.pdf}
 
-	\begin{minipage}{\linewidth}
+	\begin{minipage}{0.9\linewidth}
 		\scriptsize{\emph{Notes:} The figure shows the distribution of assaults across hours of the day, days of the week, across months (adjusted for the number of days per month), and across the days of the year in the Federal Republic of Germany.\newline 	\hspace*{15 pt}$^1$: The figures in panel C and D are solely based on the year 2014. Please consult the appendix for figures from the other years.}
 	\end{minipage}
 \end{figure}
