--- a/analysis/output/tables/soc_ext_fig__fe_age_profile.tex
+++ b/analysis/output/tables/soc_ext_fig__fe_age_profile.tex
@@ -10,7 +10,7 @@
 		\includegraphics[width=\linewidth]{regression/fe_agebrackets_m.pdf}
 	\end{subfigure}
 	\scriptsize
-	\begin{minipage}{\linewidth}
+	\begin{minipage}{0.95\linewidth}
 		\emph{Notes:} The figure shows estimates and 95\% confidence intervals across age brackets and by gender. To estimate the effect, I use the model shown in equation \ref{eq_soc_ext:model} in its richest specification with all covariates and population weights. The outcome variable is defined as the number of assaults per million population.
 	\end{minipage}
 \end{figure}
