tables layout: first word capitalized

--- a/analysis/output/tables/descriptive/offense_key_stgb_code.tex
+++ b/analysis/output/tables/descriptive/offense_key_stgb_code.tex
@@ -1,9 +1,9 @@
 \textbf{Broadly defined assault}\\
-\hspace{10pt} simple willful bodily harm					&224000			& 223 \\
-\hspace{10pt} negligent bodily harm							&225000			& 229 \\
-\hspace{10pt} dangerous bodily harm							&222010,222110	& 224 \\
-\hspace{10pt} grievous bodily harm							&222020,222120	& 226 \\
-\hspace{10pt} brawls										&222030,222130	& 231 \\
+\hspace{10pt} Simple willful bodily harm					&224000			& 223 \\
+\hspace{10pt} Negligent bodily harm							&225000			& 229 \\
+\hspace{10pt} Dangerous bodily harm							&222010,222110	& 224 \\
+\hspace{10pt} Grievous bodily harm							&222020,222120	& 226 \\
+\hspace{10pt} Brawls										&222030,222130	& 231 \\
 \\				
 \textbf{Resistance to enforcement officers} 				&621021,621029	& 113 \\
 \\
