--- a/analysis/output/tables/soc_ext_tab__reg_fe_assrate_prominent_games.tex
+++ b/analysis/output/tables/soc_ext_tab__reg_fe_assrate_prominent_games.tex
@@ -7,7 +7,7 @@
 				\midrule \\
 				&\multicolumn{2}{c}{Rivals/derbies} & \multicolumn{3}{c}{League}\\
 				\cmidrule(lr){2-3}\cmidrule(lr){4-6}
-				& high-rivalry & regular & league 1 & league 2 & league 3\\
+				& High-rivalry & Regular & League 1 & League 2 & League 3\\
 				\midrule
 				\input{reg_fe/assrate_fixed_effects_prominent_games} 
 				\bottomrule 
