--- a/analysis/output/tables/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
+++ b/analysis/output/tables/soc_ext_tab__reg_fe_asrate_victim_crime_chars.tex
@@ -14,7 +14,7 @@
 				\multicolumn{6}{l}{\textit{\textbf{Panel A: Victim characteristics}}} \\\\
 					& \multicolumn{2}{c}{Gender} & \multicolumn{3}{c}{Victim-suspect-relationship} & Occupation \\
 					\cmidrule(lr){2-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7}
-				&  women & men & strangers$^a$ & \clb{c}{prior$^a$\\relation} & domestic$^b$ & police \\
+				&  Women & Men & Strangers$^a$ & \clb{c}{Prior$^a$\\relation} & Domestic$^b$ & Police \\
 				\midrule			
 				Game day           		 &     0.245\sym{***}&       2.432\sym{***}&       1.939\sym{***}&       0.738\sym{***}&       0.096\sym{**} &       0.434\sym{***}\\
 				                    	 &   (0.090)         &     (0.232)         &     (0.207)         &     (0.116)         &     (0.045)         &     (0.078)         \\
@@ -25,7 +25,7 @@
 				\multicolumn{6}{l}{\textit{\textbf{Panel B: Crime characteristics}}} \\\\
 				& \multicolumn{4}{c}{Timing$^c$} & \multicolumn{2}{c}{Assault execution} \\
 				\cmidrule(lr){2-5} \cmidrule(lr){6-7}
-				& spring & summer & fall & winter & attempt & \clb{c}{completed\\act} \\
+				& Spring & Summer & Fall & Winter & Attempt & \clb{c}{Completed\\act} \\
 				\midrule
 				Game day            	 &     2.817\sym{***}&       1.482\sym{**} &       2.478\sym{***}&       2.849\sym{***}&       0.367\sym{***}&       2.310\sym{***}\\
 										 &   (0.404)         &     (0.484)         &     (0.372)         &     (0.535)         &     (0.060)         &     (0.238)         \\
