--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -312,7 +312,7 @@ I perform several sensitivity and placebo tests to assess the robustness of the 
 
 
 % Alternative econometrics: sample, weights, estimation
-\textbf{Alternative econometric specifications.--} First, I show that the results are not sensitive to alterations in the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than originally planned. Deviation from the original match schedule may pose a risk to the allocation of games that is plausibly random. For this reason, I exclude the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{Of the 4,461 games in the sample, 2.24 percent are rescheduled. The vast majority of rescheduled matches (95 percent) take place in league three.} Second, I show the effects of omitting population \textit{weights} from the regressions. The effect of football matches without considering population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they become more relevant when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Given the discrete nature of the dependent variable and the fact that there are many cells with zero reports, I employ a Poisson model. The corresponding regression specification reads as follows:
+\textbf{Alternative Econometric Specifications.---} First, I show that the results are not sensitive to alterations in the \textit{sample}. Adjustments to the sample may be necessary as some of the games are played on different days than originally planned. Deviation from the original match schedule may pose a risk to the allocation of games that is plausibly random. For this reason, I exclude the set of rescheduled games from the analysis. The results are almost identical to the baseline results.\footnote{Of the 4,461 games in the sample, 2.24 percent are rescheduled. The vast majority of rescheduled matches (95 percent) take place in league three.} Second, I show the effects of omitting population \textit{weights} from the regressions. The effect of football matches without considering population weights is considerably larger: a home game leads to an increase in the average assault rate by 5.342 assaults per million population. The higher coefficient compared to the baseline specification indicates that the effects of rural areas must be larger, as they become more relevant when population weights are omitted. Third, I show that my results are robust to a different \textit{estimation} procedure and an alternative measure of the \textit{dependent variable}. In the following, I use the raw number of assaults as the outcome variable. Given the discrete nature of the dependent variable and the fact that there are many cells with zero reports, I employ a Poisson model. The corresponding regression specification reads as follows:
 
 \begin{align}
 E\left[ \text{Assaults}_{rdmy}\right.&|\left.\text{Gameday}_{rdmy},\vartheta_r,\text{date}_{dmy}, \mathbf{X}_{rdmy} \right] \nonumber \\ &= exp\left( \beta\ (\text{Gameday}_{rdmy}) + \vartheta_r + \text{date}_{dmy} + \lambda\mathbf{X}_{rdmy} \right). 
@@ -323,13 +323,13 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 
 
 % Other forms of violence 
-\textbf{Other forms of violence.--} Next, I investigate the robustness of the findings when considering at other forms of violence. First, a broader definition of assaults is considered. In addition to offenses coded as `simple willful bodily harm', I further include negligent, dangerous, and grievous bodily harm as well as brawls. Appendix Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are included in the expanded definition of assaults and how the penal codes of the German Criminal Code (\textit{StGB}) are translated into the offense keys of the Police Crime Statistics. The effect size of 5.417 assaults per million population is significantly larger than the baseline coefficient. This indicates that football games also lead to an increase in other forms of physical violence. Second, I investigate the effect of football games on threats, which can be regarded as a precursor of physical violence. The effect size of 0.216 threats per million population is relatively small. The estimate represents a 5.4 percent increase. Third, offenses coded as resisting law enforcement officers are examined. I find that football games lead to on average 0.775 offenses per million population. Overall, the results of these robustness checks indicate that other forms of violence are also affected by professional football games. This suggests that there is no substitution of different types of crime, but that additional violent offenses are committed.\newline
+\textbf{Other Forms of Violence.---} Next, I investigate the robustness of the findings when considering at other forms of violence. First, a broader definition of assaults is considered. In addition to offenses coded as `simple willful bodily harm', I further include negligent, dangerous, and grievous bodily harm as well as brawls. Appendix Table \ref{tab_soc_ext:offense_keys_code} illustrates which offenses are included in the expanded definition of assaults and how the penal codes of the German Criminal Code (\textit{StGB}) are translated into the offense keys of the Police Crime Statistics. The effect size of 5.417 assaults per million population is significantly larger than the baseline coefficient. This indicates that football games also lead to an increase in other forms of physical violence. Second, I investigate the effect of football games on threats, which can be regarded as a precursor of physical violence. The effect size of 0.216 threats per million population is relatively small. The estimate represents a 5.4 percent increase. Third, offenses coded as resisting law enforcement officers are examined. I find that football games lead to on average 0.775 offenses per million population. Overall, the results of these robustness checks indicate that other forms of violence are also affected by professional football games. This suggests that there is no substitution of different types of crime, but that additional violent offenses are committed.\newline
 
 % fig: PLACEBO GAMES
 \input{soc_ext_fig__robustness_placebo_games}
 
 % Placebo games
-\textbf{Placebo games.--} I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
+\textbf{Placebo Games.---} I estimate the impact of \textit{placebo games} on the assault rate to test whether the previous results are only due to chance.\footnote{Unfortunately, there are no offenses that can function as placebo outcomes. This is because most of the offenses covered in the PCS are potentially affected by football games.} The actual matches take place on about five percent of the days in the sample. To estimate the effect of placebo games, I drop the affected days with the actual matches and randomly assign dummy indicators with the same frequency of the real matches. Subsequently, I estimate the model as shown in equation \ref{eq_soc_ext:model}. This procedure is carried out 10,000 times and the results are shown in Figure \ref{fig_soc_ext:robustness_placebo_games}. Panel A displays the distribution of the coefficients. As expected, the coefficients are centered around zero. Panel B illustrates the distribution of the t-statistics. The red area below the kernel density indicates significant estimates for a significance level of $\alpha=0.05$. Panel C shows that with 10,000 iterations, 6.57 percent of the estimates are significantly different from zero. At a significance level of $\alpha=0.01$, there are 3.06 percent significant estimates. The low levels of significant coefficients confirm that the previous results are not due to chance. 
 
 
 
