remove hist of distances - for diss: LOF fits on 1 page - can be reverted

--- a/TeX/paper/parts/soc_ext_appendix_figures.tex
+++ b/TeX/paper/parts/soc_ext_appendix_figures.tex
@@ -62,16 +62,16 @@
 \vspace*{\fill}\clearpage
 %--------------------------------------------
 
-% WEATHER MONITORS: histogram of the distance stadium <-> monitor
-\vspace*{\fill}
-\begin{figure}[H]\centering
-	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_distance_monitors_stadiums.pdf}
-	\begin{minipage}{0.95\linewidth}
-		\caption{The distance between stadiums and their closest weather monitor}\label{fig_soc_ext:hist_distance_stadium_monitors}
-		\scriptsize{\emph{Notes:} The figure shows the distribution of the distance between stadiums and their closest weather monitor. The average distance between the two is 15 km. \newline \emph{Source:} Own representation with data from Germany's National Meterological Service (Deutscher Wetterdienst).}
-	\end{minipage}
-\end{figure}
-\vspace*{\fill}\clearpage
+%% WEATHER MONITORS: histogram of the distance stadium <-> monitor
+%\vspace*{\fill}
+%\begin{figure}[H]\centering
+%	\includegraphics[width=0.9 \linewidth]{descriptive/soc_ext_distance_monitors_stadiums.pdf}
+%	\begin{minipage}{0.95\linewidth}
+%		\caption{The distance between stadiums and their closest weather monitor}\label{fig_soc_ext:hist_distance_stadium_monitors}
+%		\scriptsize{\emph{Notes:} The figure shows the distribution of the distance between stadiums and their closest weather monitor. The average distance between the two is 15 km. \newline \emph{Source:} Own representation with data from Germany's National Meterological Service (Deutscher Wetterdienst).}
+%	\end{minipage}
+%\end{figure}
+%\vspace*{\fill}\clearpage
 
 
 %--------------------------------------------
