--- a/TeX/paper/parts/soc_ext_body.tex
+++ b/TeX/paper/parts/soc_ext_body.tex
@@ -148,8 +148,9 @@ When investigating channels of how football games may affect assaults, I exploit
 
 
 \subsection{Weather Data}
-The weather data is derived from Germany's National Meteorological Service (\textit{Deutscher Wetterdienst}). In order to construct the weather control variables, I use those weather monitors which measure the relevant weather variables in the sample period.\footnote{I use daily averages of the following weather variables: daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, hours of sunshine, snow depth, and wind velocity.} From this set of monitors, I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. There is a high quality of the matches between weather monitors and stadiums, as the average distance between stadiums and monitors is 15 kilometers.\footnote{The distribution of the distance of the monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}.} Few of the weather variables have missing data, which are filled in by propagating forward from the last valid observation to the next valid observation (i.e. `forward fill').\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2 percent) and snow depth (<0.6 percent).}
-
+The weather data is derived from Germany's National Meteorological Service (\textit{Deutscher Wetterdienst}). In order to construct the weather control variables, I use those weather monitors which measure the relevant weather variables in the sample period.\footnote{I use daily averages of the following weather variables: daily average, minimum and maximum air temperature, minimum ground temperature, vapor pressure, air pressure, cloud cover, air humidity, precipitation, hours of sunshine, snow depth, and wind velocity.} From this set of monitors, I choose the weather monitor with the closest proximity to a stadium. The assigned monitor-stadium pairs can be found in Figure \ref{fig_soc_ext:map_gem_stadiums_monitor_and_neighboring_regions}. There is a high quality of the matches between weather monitors and stadiums, as the average distance between stadiums and monitors is 15 kilometers. Few of the weather variables have missing data, which are filled in by propagating forward from the last valid observation to the next valid observation (i.e. `forward fill').\footnote{The weather variables with missing data are (with the share of missing data in parenthesis): Cloud cover (<1.2 percent) and snow depth (<0.6 percent).}
+%\footnote{The distribution of the distance of the monitor-stadium pairs can be found in Appendix Figure \ref{fig_soc_ext:hist_distance_stadium_monitors}.}
+% commented out because of diss so that lits of figures fit on one page - can be included again after submission
 
 
 \subsection{Holidays}
